--- a/beamerthememinflat.sty
+++ b/beamerthememinflat.sty
@@ -19,8 +19,8 @@
 
 
 
-\usepackage{polyglossia}
-\setdefaultlanguage{portuguese}
+%\usepackage{polyglossia}
+%\setdefaultlanguage{portuguese}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
