--- a/FQ/EquilibrioQuimico/EquilibrioIonico.org
+++ b/FQ/EquilibrioQuimico/EquilibrioIonico.org
@@ -1,1 +1,71 @@
-#+TITLE: Equilibrio Ionico
+#+TITLE: Equilíbrio Iônico
+
+
+* Equilíbrio Iônico
+
+** Equilíbrio Iônico
+
+O equilíbrio iônico é o equilíbrio observado em reações onde temos íons em solução.
+
+
+* Constante de Ionização
+
+** 
+
+*Constante de ionização de um ácido (K_i ou K_a)*
+
+ Reação de ionização de um ácido HX:
+
+   #+begin_export latex
+   \begin{reaction*}
+   HX <=> H^+\aq{} + X^-\aq{}
+   \end{reaction*}
+   #+end_export
+   
+Constante de equilíbrio
+
+   #+begin_export latex 
+   \begin{equation}
+   K_i = \frac{[\text{H}^{+}] \cdot [\text{X}^{-}]}{[\text{HX}]}
+   \end{equation}
+   #+end_export
+   
+
+*Reação de dissociação de uma base (K_d ou K_b)*
+
+  #+begin_export latex
+  \begin{reaction*}
+   BOH\sld{} <=> B^+\aq{} + OH^-\aq{}
+  \end{reaction*}
+  #+end_export
+
+  Constante de equilíbrio
+
+  #+begin_export latex
+  \begin{equation}
+ \text{K}_b = [\text{B}^{+}] \cdot [\text{OH}^{-}]
+  \end{equation}
+  #+end_export
+
+** 
+
+#+ATTR_LATEX: :options [couleur=yellow!20, epBord=2, arrondi=0.2, logo=\bcinfo,marge=8, ombre=true, blur, couleurBord=yellow!60, barre=snake, tailleOndu=3]{Observação}
+#+begin_bclogo
+\small Conforme pode ser verificado , no equilíbrio iônico, a água não aparece na expressão da constante de ionização, pois ela age apenas como *solvente* e não como reagente
+#+end_bclogo
+
+
+#+begin_export latex
+\begin{center}
+\smartdiagramset{back arrow disabled=true, module minimum height=2.5cm,text width=3cm,   module x sep=4.2cm,description title font=\small}
+%\smartdiagramset{description title font=\small,description font=\sffamily}
+\scalebox{.75}{
+\smartdiagram[flow diagram:horizontal]{
+\faFile~Elevados valores de constante maior força do ácido ou base,
+\faAddressBook~Maior valor de de K$_i$ maior será grau de ionização ($\alpha$),
+\faPencil~Toda constante de ionização K$_i$ temos um grau de ionização associado,
+\faAlignLeft~K$_i$ também depende da temperatura
+}
+}
+\end{center}
+#+end_export
