--- a/packages.org
+++ b/packages.org
@@ -27,7 +27,7 @@
 #+LATEX_HEADER: \usepackage{amsmath}
 #+LATEX_HEADER: \usepackage[most]{tcolorbox}
 #+LATEX_HEADER: \usepackage{amssymb}
-#+LATEX_HEADER: \usepackage{fontawesome}
+#+LATEX_HEADER: %\usepackage{fontawesome}
 #+LATEX_HEADER: \usepackage{tasks}
 #+LATEX_HEADER: \newcounter{paragraph}
 #+LATEX_HEADER: %\usepackage[dvipsnames,svgnames]{xcolor}
@@ -106,6 +106,11 @@
 #+LATEX_HEADER: %%% PACKAGE PLOT GRAPH 
 #+LATEX_HEADER: \usepackage{pgfplots}
 #+LATEX_HEADER: \pgfplotsset{width=10cm,compat=1.9}
+
+#+LATEX_HEADER: %%%% FONTS
+#+LATEX_HEADER: \usepackage{smartdiagram}
+#+LATEX_HEADER: \usesmartdiagramlibrary{additions}
+#+LATEX_HEADER: \usepackage[fixed]{fontawesome6}
 
 
 
